--- a/src/app/module/exercise-physique/biceps/biceps.component.scss
+++ b/src/app/module/exercise-physique/biceps/biceps.component.scss
@@ -22,4 +22,29 @@ table {
     }
     
 }
+nav {
+    background-color:whitesmoke;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+nav li a {
+    color:black;
+    text-decoration: none;
+    padding: 5px 10px;
+}
+
+nav li a:hover {
+    background-color:blue;
+}
